# media-impact-monitor

./: .all-contributorsrc  .dockerignore  .env.example  .gitignore  .terraform.lock.hcl  Dockerfile  LICENSE  LICENSE.md  README.md  \  dev.Dockerfile  main.tf  setup_server.sh
backend-python/: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
backend-python/data/test_data/: fulltexts.pkl
backend-python/django_project/: asgi.py  settings.py  urls.py  wsgi.py
backend-python/media_impact_monitor/: .env.example  __init__.py  api.py  api_test.py  app.py  apps.py  cron.py  events.py  events_test.py  fulltext_coding.py  fulltext_coding_test.py  fulltexts.py  fulltexts_test.py  impact.py  impact_test.py  issue_keywords.yaml  models.py  paths.py  policy.py  policy_test.py  sentiment.py  trend.py  trend_keywords.yaml  trend_test.py  types_.py  urls.py  views.py
backend-python/media_impact_monitor/data/: responses_current.json  seite1_current.html
backend-python/media_impact_monitor/data_loaders/donations/: opencollective.py
backend-python/media_impact_monitor/data_loaders/news_online/: mediacloud_.py  mediacloud_test.py
backend-python/media_impact_monitor/data_loaders/news_print/: genios.py  genios_test.py
backend-python/media_impact_monitor/data_loaders/protest/: acled.py  acled_size.py  acled_size_test.py  acled_test.py  climate_groups.py  climate_orgs.py  participant_numbers.py
backend-python/media_impact_monitor/data_loaders/social_media/: tiktok_test.py
backend-python/media_impact_monitor/data_loaders/web/: google_trends.py  google_trends_test.py
backend-python/media_impact_monitor/impact_estimators/: correlation.py  interrupted_time_series.py  interrupted_time_series_test.py  time_series_regression.py
backend-python/media_impact_monitor/migrations/: 0001_initial.py  0002_remove_event_id_alter_event_event_id.py  0003_event_organizer_aliases.py
backend-python/media_impact_monitor/templates/: about.html  base.html  dashboard.html  docs.html  event_detail.html  footer.html  header.html  index.html  organisations.html
backend-python/media_impact_monitor/tests/: events_test.py  impact_test.py  policy_test.py  sentiment_trend_test.py
backend-python/media_impact_monitor/trends/: keyword_trend.py  keyword_trend_test.py  sentiment.py  sentiment_trend.py  sentiment_trend_test.py  topic_trend.py
backend-python/media_impact_monitor/util/: cache.py  cache_test.py  date.py  date_test.py  env.py  llm.py  parallel.py  paths.py  paths_test.py
backend-python/src/media_impact_monitor/: api.py  api_test.py  cron.py  events.py  events_test.py  fulltext_coding.py  fulltext_coding_test.py  fulltexts.py  fulltexts_test.py  impact.py  impact_test.py  issue_keywords.yaml  policy_test.py  trend_test.py  types_.py
backend-python/tests/: test_paths.py
(+437 files in other folders)
