[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "media-impact-monitor"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]  # https://python-poetry.org/docs/dependency-specification/
python = "^3.10"
ipykernel = "^6.27.1"
jupyter = "^1.0.0"
joblib = "^1.3.2"
types-requests = "^2.31.0.10"
python-dotenv = "^1.0.0"
matplotlib = "^3.8.2"
mediacloud = "^4.1.3"
backoff = "^2.2.1"
openai = "^1.12.0"
zenrows = "^1.3.2"
html2text = "^2020.1.16"
openpyxl = "^3.1.2"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic = "^2.6.4"
requests = "^2.31.0"
websockets = "^12.0"
numpy = "<1.26.0" # due to causalpy requirements
pandas = "^2.1" # not higher due to causalpy requirements
causalpy = {git = "https://github.com/SocialChangeLab/CausalPy.git", branch = "davidpomerenke-patch-1" }
statsforecast = "^1.7.3"
altair = "^5.3.0"
dash = "^2.17.0"
dash-vega-components = "^0.10.0"
dash-treeview-antd = "^0.0.1"
dash-bootstrap-components = "^1.6.0"
number-parser = "^0.3.2"
litellm = "^1.37.16"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"
py-spy = "^0.3.14"

[tool.ruff.lint]
ignore = ["F401"]

