[project]
name = "media_impact_monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "aiolimiter",
    "apscheduler",
    "backoff",
    "faker",
    "fastapi",
    "freezegun",
    "html2text",
    "joblib",
    "json-repair",
    "litellm",
    "mediacloud-metadata",
    "mediacloud",
    "number-parser",
    "openai",
    "pandas",
    "pydantic",
    "python-dotenv",
    "python-slugify",
    "requests",
    "sentry-sdk[fastapi]",
    "tokencost",
    "types-requests",
    "uvicorn",
    "websockets",
    "zenrows>=1.4.0",
    "statsmodels>=0.14.4",
]

[project.optional-dependencies]
dev = [
    "altair",
    "ipykernel",
    "jupyter",
    "matplotlib",
    "openpyxl",
    "py-spy",
    "pytest-asyncio",
    "pytest",
]

[tool.uv]
package = true


[tool.ruff.lint]
ignore = ["F401"]
